Add deploy and link to tibiabuddy

--- a/index.templ
+++ b/index.templ
@@ -34,7 +34,7 @@ templ index() {
 	<article>
 		<h3>TibiaBuddy</h3>
 		<p>a simple app for you to track your Tibia buddies...</p>
-		<a href="#">View app</a>
+		<a href="http://tibiabuddy.rustydoggobytes.com">View app</a>
 	</article>
 	<article>
 		<h3>FamBuddy</h3>
