Fix home page and remove crap

--- a/index.templ
+++ b/index.templ
@@ -29,7 +29,7 @@ templ index() {
 	<article>
 		<h3>GymBuddy</h3>
 		<p>a simple app for you to track your gym workouts...</p>
-		<a href="#">View app</a>
+		<a href="http://gym.rustydoggobytes.com">View app</a>
 	</article>
 	<article>
 		<h3>TibiaBuddy</h3>
