--- a/index.templ
+++ b/index.templ
@@ -6,8 +6,8 @@ templ layout(contents templ.Component) {
 		<head>
 			<meta charset="utf-8"/>
 			<meta name="viewport" content="width=device-width, initial-scale=1"/>
-			<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css"/>
-			<script src="https://unpkg.com/htmx.org@1.9.8" integrity="sha384-rgjA7mptc2ETQqXoYC3/zJvkU7K/aP44Y+z7xQuJiVnB/422P/Ak+F/AqFR7E4Wr" crossorigin="anonymous"></script>
+			<link rel="stylesheet" href="/static/css/pico.min.css"/>
+			<script src="/static/jss/htmx.min.js" crossorigin="anonymous"></script>
 			<title>RustyDoggoBytes</title>
 		</head>
 		<body>
@@ -36,9 +36,9 @@ templ index() {
 		<p>a simple app for you to track your Tibia buddies...</p>
 		<a href="http://tibiabuddy.rustydoggobytes.com">View app</a>
 	</article>
-	<article>
-		<h3>FamBuddy</h3>
-		<p>a simple app for you to track your family activities...</p>
-		<a href="#">View app</a>
-	</article>
+	// <article>
+	// 	<h3>FamBuddy</h3>
+	// 	<p>a simple app for you to track your family activities...</p>
+	// 	<a href="#">View app</a>
+	// </article>
 }
